--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
+<head>
+    <meta property="og:title" content="tilte">
+    <meta property="og:description" content="desciption">
+    <meta property="og:image" content="https://files.catbox.moe/r4u9x4.png">
+</head>
 rs
