--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<head>
+  <meta property="og:title" content="tile">
+  <meta property="og:description" content="descpton">
+  <meta property="og:image" content="https://files.catbox.moe/r4u9x4.png">
+  <meta property="og:url" content="http://korisu.fun">
+</head>
+
 rs
