--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta property="og:title" content="tile">
   <meta property="og:description" content="descpton">
-  <meta property="og:image" content="https://files.catbox.moe/r4u9x4.png">
+  <meta property="og:image" content="https://cdn.discordapp.com/attachments/1346308233928638524/1351685714781278238/Kasane_Pearto_Original.png?ex=67db46eb&is=67d9f56b&hm=9336424fa92335a36c8875d8fc7b6e50ece3377de834bfea5cce010ee4c902f2&">
   <meta property="og:url" content="http://korisu.fun">
 </head>
 
