--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta property="og:title" content="tile">
   <meta property="og:description" content="descpton">
-  <meta property="og:image" content="https://files.catbox.moe/ts3fm3.png?v=1">
+  <meta property="og:image" content="http://korisu.fun/test.png">
   <meta property="og:url" content="http://korisu.fun">
 </head>
 
