--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
+  <meta property="og:type" content="website">
   <meta property="og:title" content="tile">
-  <meta property="og:description" content="descpton">
+  <meta property="og:url" content="http://korisu.fun/">
   <meta property="og:image" content="http://korisu.fun/test.png">
-  <meta property="og:url" content="http://korisu.fun">
 </head>
 
 rs
