--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta property="og:title" content="tile">
   <meta property="og:url" content="http://korisu.fun/">
   <meta property="og:image" content="http://korisu.fun/test.png">
+  <meta property="og:description" content="dcription">
 </head>
 
 rs
