--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="tile">
-  <meta property="og:url" content="http://korisu.fun/">
-  <meta property="og:image" content="http://korisu.fun/test.png">
-  <meta property="og:description" content="dcription">
+<meta property="og:url" content="http://korisu.fun">
+<meta property="og:type" content="website">
+<meta property="og:title" content="tltle">
+<meta property="og:description" content="read if cute">
+<meta property="og:image" content="http://korisu.fun/test.png?size=256">
 </head>
 
 rs
