--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>ablubluble</title>
 <head>
 <meta property="og:url" content="http://korisu.fun">
 <meta property="og:type" content="website">
