--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<html lang="pt">
 <head>
-  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
   <title>ablubluble</title>
