--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<html lang="pt">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
-  <title>ablubluble</title>
   <meta property="og:url" content="http://korisu.fun">
   <meta property="og:type" content="website">
   <meta property="og:title" content="tltle">
