--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:url" content="http://korisu.fun">
   <meta property="og:type" content="website">
   <meta property="og:title" content="tltle">
   <meta property="og:description" content="read if cute">
   <meta property="og:image" content="http://korisu.fun/test.png?size=256">
 </head>
-
 rs
