--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>tltle</title>
   <meta property="og:url" content="http://korisu.fun">
   <meta property="og:type" content="website">
   <meta property="og:title" content="tltle">
