--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="http://korisu.fun/test.png?size=256">
   <title>tltle</title>
-  <meta property="og:description" content="read if cute">
-  <meta property="og:url" content="http://korisu.fun">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="tltle">
+  <meta property="og:title" content="title">
+  <meta property="og:url" content="http://korisu.fun">
   <meta property="og:image" content="http://korisu.fun/test.png?size=256">
+  <meta property="og:description" content="descption">
 </head>
