--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:url" content="http://korisu.fun">
+  <meta property="og:url" content="https://korisu.fun">
   <meta property="og:type" content="website">
   <meta property="og:title" content="tltle">
   <meta property="og:description" content="read if cute">
-  <meta property="og:image" content="http://korisu.fun/secret/secret.png">
+  <meta property="og:image" content="https://korisu.fun/secret/secret.png">
 </head>
 r
