--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="tltle">
   <meta property="og:description" content="read if cute">
-  <meta property="og:image" content="https://korisu.fun/secret/secret.png">
+  <meta property="og:image" content="https://korisu.fun/secret.png">
+  <title>wip i guess</title>
 </head>
-r
+<body>
+:3
+<img src="secret.png">
+
+  
+</body>
