--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="tltle">
   <meta property="og:description" content="read if cute">
-  <meta property="og:image" content="https://korisu.fun/secret.png">
+  <meta property="og:image" content="https://korisu.fun/pear2.jpg">
   <title>wip i guess</title>
 </head>
 <body>
 :3
-<img src="secret.png">
+<img src="pear.jpeg">
 </body>
