--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta property="og:url" content="https://korisu.fun">
   <meta property="og:type" content="website">
   <meta property="og:title" content="tltle">
-  <meta property="og:description" content="read if cute">
+  <meta property="og:description" content="read if cute (wip)">
   <meta property="og:image" content="https://korisu.fun/pear2.jpg">
   <title>wip i guess</title>
 </head>
